--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -31,7 +31,7 @@
     <section class="join">
         <img class="image"
              lazy-resource
-             src="../../../assets/images/map.png"
+             src="assets/images/map.png"
              [alt]="'App.HomePage.JoinSection.ImageAlt' | translate"/>
         <div class="description">
             <h2 class="title static-page-title" translate>App.HomePage.JoinSection.Title</h2>
