--- a/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/participation/participation.component.scss
@@ -32,11 +32,14 @@
         }
 
         &__time {
-            font-size: 1.13rem;
+            mat-icon {
+                vertical-align: top;
+                margin-right: 8px;
+            }
         }
 
         &__title {
-            margin: 1.38rem 0 1.13rem 0;
+            margin: 0 0 1.13rem 0;
         }
 
         &__text {
