--- a/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/common.scss
@@ -24,9 +24,11 @@
 }
 
 .participate-step-time {
-    font-size: 1rem;
-    letter-spacing: -0.07px;
+    font-size: 1.5rem;
+    letter-spacing: -0.1px;
     line-height: 24px;
+    color: #7054FF;
+    margin: 1rem 0;
 }
 
 .btn-common {
