Styling FAQ section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -49,7 +49,8 @@
     <section class="faq">
         <h2 class="title static-page-title" translate>App.FAQ.Title</h2>
         <div class="container">
-            <app-faq-section questions="App.ColorectalPage.FAQ.Questions"></app-faq-section>
+            <app-faq-section questions="App.ColorectalPage.FAQ.Questions" darkTheme="true">
+            </app-faq-section>
         </div>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
