Styling Partners section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -63,21 +63,26 @@
         <h2 class="title static-page-title" translate>App.ColorectalPage.Partners.Title</h2>
         <div class="logos">
             <!-- TODO replace with real logos! -->
-            <img src="assets/images/logo-broad.svg"
-                 [alt]="'App.ColorectalPage.Partners.CCResource' | translate"
-                 width="124" height="32">
-            <img src="assets/images/logo-broad.svg"
-                 [alt]="'App.ColorectalPage.Partners.GICAlliance' | translate"
-                 width="124" height="32">
-            <img src="assets/images/logo-broad.svg"
-                 [alt]="'App.ColorectalPage.Partners.FightCC' | translate"
-                 width="124" height="32">
-            <img src="assets/images/logo-broad.svg"
-                 [alt]="'App.ColorectalPage.Partners.Raymond' | translate"
-                 width="124" height="32">
-            <img src="assets/images/logo-broad.svg"
-                 [alt]="'App.ColorectalPage.Partners.CCCanada' | translate"
-                 width="124" height="32">
+            <img src="assets/images/"
+                 [alt]="'App.ColorectalPage.Partners.Alts.CCResource' | translate"
+                 style="background-color: lightgrey; "
+                 width="350" height="200">
+            <img src="assets/images/"
+                 [alt]="'App.ColorectalPage.Partners.Alts.GICAlliance' | translate"
+                 style="background-color: lightgrey;"
+                 width="350" height="200">
+            <img src="assets/images/"
+                 [alt]="'App.ColorectalPage.Partners.Alts.FightCC' | translate"
+                 style="background-color: lightgrey;"
+                 width="350" height="200">
+            <img src="assets/images/"
+                 [alt]="'App.ColorectalPage.Partners.Alts.Raymond' | translate"
+                 style="background-color: lightgrey;"
+                 width="350" height="200">
+            <img src="assets/images/"
+                 [alt]="'App.ColorectalPage.Partners.Alts.CCCanada' | translate"
+                 style="background-color: lightgrey;"
+                 width="350" height="200">
         </div>
         <p class="text static-page-paragraph-text" [innerHTML]="'App.ColorectalPage.Partners.Text' | translate"></p>
     </section>
