Styling Stay-informed section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -102,6 +102,15 @@ section {
             justify-content: space-between;
         }
     }
+
+    &.stay-informed {
+        padding-top: 5.375rem;
+        padding-bottom: 4.5rem;
+
+        ::ng-deep .container {
+            max-width: 1062px;
+        }
+    }
 }
 
 .btn {
