Styling Join-cmi section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -111,6 +111,11 @@ section {
             max-width: 1062px;
         }
     }
+
+    &.join-cmi {
+        padding-top: 4.75rem;
+        padding-bottom: 6.19rem;
+    }
 }
 
 .btn {
