Add footer for splash pages

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
     <app-header></app-header>
     <router-outlet></router-outlet>
-    <app-footer></app-footer>
+    <app-footer *ngIf="!isSplashPage"></app-footer>
 </div>
