--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -95,3 +95,4 @@
         <app-join-cmi-section></app-join-cmi-section>
     </section>
 </main>
+<app-splash-page-footer [phone]="phone" [email]="email"></app-splash-page-footer>
