--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -12,6 +12,7 @@ $secondary-font: Source Serif Pro;
 // Other
 $header-height: 6rem;
 $footer-height: 14.94rem;
+$splash-page-footer-height: 18.19rem;
 $landing-page-container-width: 1200px;
 
 // Colors
@@ -24,3 +25,6 @@ $warn-color: #f44336;
 $activity-step-pristine: #bbbbbe;
 $activity-step-completed: $grey-text-color;
 $activity-step-active: #1d1b25;
+$footer-background: #131314;
+$footer-divider-color: #444444;
+
