--- a/ddp-workspace/projects/ddp-pancan/src/styles.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles.scss
@@ -4,6 +4,7 @@
 @import 'styles/activities';
 @import 'styles/buttons';
 @import 'styles/redirect';
+@import 'styles/dashboard';
 
 html,
 body {
@@ -55,6 +56,17 @@ a {
     &:focus, &:hover {
         text-decoration: underline;
     }
+}
+
+ol li, p, ul li {
+    font-size: 1.125rem;
+    line-height: 2rem;
+}
+
+h1 {
+    font-family: $primary-font-medium;
+    font-size: 1.5rem;
+    font-weight: normal;
 }
 
 .SimpleButton {
@@ -232,7 +244,6 @@ ddp-language-selector {
     font-family: $primary-font-medium;
 }
 
-ol li, p, ul li {
-    font-size: 1.125rem;
-    line-height: 2rem;
+.content_medium {
+    max-width: 1100px;
 }
