DDP-6007: Add Error page

--- a/ddp-workspace/projects/ddp-brugada/src/app/components/footer/footer.component.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/app/components/footer/footer.component.scss
@@ -1,6 +1,10 @@
 @import '../../../styles/colors';
 @import '../../../styles/breakpoints';
 
+:host {
+  margin-top: auto;
+}
+
 .footer {
   padding: 4.2rem 0;
 
