Apply spanish translations

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -88,7 +88,10 @@
     </section>
 
     <section class="stay-informed">
-        <app-stay-informed-section></app-stay-informed-section>
+        <app-stay-informed-section
+            title="App.ColorectalPage.StayInformed.Title"
+            btnText="App.ColorectalPage.StayInformed.Button">
+        </app-stay-informed-section>
     </section>
 
     <section class="join-cmi">
