--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 class="title static-page-title" translate>App.HomePage.StayInformedSection.Title</h2>
+    <h2 class="title static-page-title">{{(title || 'App.HomePage.StayInformedSection.Title') | translate}}</h2>
     <div class="social-media">
         <div class="text static-page-paragraph-text" translate>App.HomePage.StayInformedSection.Text</div>
         <div class="social-media__links">
@@ -16,6 +16,6 @@
     <button mat-stroked-button
             class="btn join-btn small-letter-spacing btn-common btn-outline"
             (click)="openJoinMailingList()">
-        {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
+        {{(btnText || 'App.HomePage.StayInformedSection.JoinMailingListButton') | translate}}
     </button>
 </div>
