Add real image for introduction section

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -12,11 +12,9 @@
                 </a>
             </div>
             <div class="image">
-                <!-- TODO: replace with a real image -->
-                <img src="assets/images/real-image.svg"
-                     style="background-color: lightgrey; width: 100%; height: 100%; display: block;"
+                <img src="assets/images/colorectal_main.png"
                      [alt]="'App.ColorectalPage.IntroductionSection.ImageAlt' | translate"
-                     width="524" height="492">
+                     width="390" height="385">
             </div>
         </div>
         <div class="logos">
