--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -19,7 +19,7 @@ section {
 
         .flex{
             display: flex;
-            gap: 5rem;
+            gap: 9rem;
         }
 
         .description {
@@ -36,7 +36,7 @@ section {
         }
 
         .logos {
-            padding: 1rem;
+            padding: 2rem 0 1rem;
 
             img:first-child {
                 margin-right: 5rem;
