Fix layout and css

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -11,11 +11,9 @@
                     {{'App.HomePage.JoinCountMeInButton' | translate}}
                 </a>
             </div>
-            <div class="image">
-                <img src="assets/images/colorectal_main.png"
-                     [alt]="'App.ColorectalPage.IntroductionSection.ImageAlt' | translate"
-                     width="390" height="385">
-            </div>
+            <img src="assets/images/colorectal_main.png" class="image"
+                 [alt]="'App.ColorectalPage.IntroductionSection.ImageAlt' | translate"
+                 width="390" height="385">
         </div>
         <div class="logos">
             <img src="assets/images/logo-broad.svg"
