Fix footer styles for tablets

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.scss
@@ -67,3 +67,10 @@
         margin-top: 1rem;
     }
 }
+
+@media screen and (max-width: $desktop-breakpoint) {
+    .footer {
+        justify-content: space-between;
+        gap: 3rem;
+    }
+}
