Fix  styles for small screens

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/splash-page-footer/splash-page-footer.component.html
@@ -11,9 +11,13 @@
 
     <div class="contacts">
         <div translate class="contacts__label">App.Footer.Contacts</div>
-        <div translate class="contacts__item-label">App.Footer.Email</div>
-        <a target="_blank" class="contacts__item" href="tel:{{phone}}">{{phone}}</a>
-        <div translate class="contacts__item-label">App.Footer.Phone</div>
-        <a target="_blank" class="contacts__item" href="mailto:{{email}}">{{email}}</a>
+        <div>
+            <div translate class="contacts__item-label">App.Footer.Email</div>
+            <a target="_blank" class="contacts__item" href="tel:{{email}}">{{email}}</a>
+        </div>
+        <div>
+            <div translate class="contacts__item-label">App.Footer.Phone</div>
+            <a target="_blank" class="contacts__item" href="mailto:{{phone}}">{{phone}}</a>
+        </div>
     </div>
 </footer>
