--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.scss
@@ -19,7 +19,7 @@ section {
         max-width: 1440px;
         padding: 5.125rem 5rem 1.5rem;
 
-        .flex{
+        .flex {
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
@@ -152,6 +152,60 @@ section {
             .image {
                 width: 320px;
                 height: 315px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $tablet-breakpoint) {
+    section {
+        &.introduction {
+            .flex {
+                flex-direction: column;
+                align-items: center;
+                gap: 2rem;
+            }
+
+            .description {
+                text-align: center;
+                padding: 0;
+            }
+
+            .image {
+                width: 260px;
+                height: 255px;
+            }
+
+            .logos img:first-child {
+                margin-right: 3rem;
+            }
+        }
+
+        &.partners {
+            .logos {
+                flex-direction: column;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: $mobile-breakpoint) {
+    section {
+        padding-left: 1.5rem !important;
+        padding-right: 1.5rem !important;
+
+        &.introduction {
+            .description {
+                min-width: unset;
+            }
+
+            .image {
+                display: none;
+            }
+
+            .logos img {
+                display: block;
+                margin: 0 auto 5px !important;
             }
         }
     }
