--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/participation-section/participation-section.component.scss
@@ -65,23 +65,43 @@
 }
 
 @media screen and (max-width: $tablet-breakpoint) {
-    .steps {
-        flex-wrap: wrap;
-        gap: 3rem;
-    }
+    .container {
+        text-align: center;
 
-    .step {
-        flex: 1 1 200px;
-        margin-right: 0;
+        &.steps {
+            flex-wrap: wrap;
+            gap: 3rem;
+            justify-content: center !important;
 
-        &__image {
-            width: 250px;
-            height: 250px;
-            left: unset;
-        }
+            .step {
+                flex: unset;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 0;
+                min-width: 375px;
 
-        &__description {
-            max-width: unset;
+                &__image {
+                    width: 250px;
+                    height: 250px;
+                    left: 0;
+                }
+
+                &__description {
+                    max-width: 350px;
+                }
+            }
         }
     }
 }
+
+@media screen and (max-width: $mobile-breakpoint) {
+    .container {
+        &.steps {
+            .step__description {
+                max-width: 240px;
+            }
+        }
+    }
+}
+
