DDP-6625 fix prequal styles (checkbox list styles, question title, material components font)

--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -23,3 +23,4 @@ $warn-color: #f44336;
 $activity-step-pristine: #bbbbbe;
 $activity-step-completed: $grey-text-color;
 $activity-step-active: #1d1b25;
+$checkbox-color: #ACABB0;
