DDP-6625 fix prequal styles (checkbox list styles, question title, material components font)

--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -479,5 +479,5 @@ select:disabled {
 }
 
 .mat-checkbox-frame {
-    border-color: $checkbox-color;
+    border-color: $checkbox-color !important;
 }
