--- a/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/variables.scss
@@ -20,7 +20,6 @@ $grey-text-color: #59585F;
 $grey-button-color: #a8a8a8;
 $section-grey-background-color: #F6F7FA;
 $warn-color: #f44336;
-$activity-step-pristine: #bbbbbe;
-$activity-step-completed: $grey-text-color;
-$activity-step-active: #1d1b25;
+$activity-step-default: #CBCAD0;
+$activity-step-inactive: #5a42d0;
 $checkbox-color: #ACABB0;
