Brugada: fix links opacity

--- a/ddp-workspace/projects/ddp-brugada/src/styles/_buttons.scss
+++ b/ddp-workspace/projects/ddp-brugada/src/styles/_buttons.scss
@@ -76,12 +76,12 @@
   transition: opacity 0.3s ease;
 
   &:disabled {
-    opacity: 75%;
+    opacity: 0.75;
 
     cursor: not-allowed;
   }
 
   &:hover {
-    opacity: 75%;
+    opacity: 0.75;
   }
 }
