Fix styles after review

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.html
@@ -1,6 +1,6 @@
 <mat-accordion hideToggle="true" multi="true" displayMode="flat" >
     <ng-container *ngFor="let item of questions | translate | slice : 0 : questionsCount;">
-        <mat-expansion-panel #panel [class.darkTheme]="darkTheme">
+        <mat-expansion-panel #panel [class.darkerBackground]="darkerBackground">
             <mat-expansion-panel-header collapsedHeight="100%" expandedHeight="100%">
                 <mat-icon *ngIf="!panel.expanded" class="faq-block__icon">add</mat-icon>
                 <mat-icon *ngIf="panel.expanded" class="faq-block__icon">clear</mat-icon>
