--- a/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/splash-pages/colorectal-page/colorectal-page.component.html
@@ -45,7 +45,7 @@
     <section class="faq">
         <h2 class="title static-page-title" translate>App.FAQ.Title</h2>
         <div class="container">
-            <app-faq-section questions="App.ColorectalPage.FAQ.Questions" darkTheme="true">
+            <app-faq-section questions="App.ColorectalPage.FAQ.Questions" darkerBackground="true">
             </app-faq-section>
         </div>
         <a mat-stroked-button
