--- a/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/faq-section/faq-section.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/variables.scss';
 
 $border-color: #EBEBEB;
-$dark-theme-border-color: #979797;
+$dark-grey-border-color: #979797;
 $icon-width: 24px;
 $icon-margin-right: 2rem;
 $question-padding: 1.5rem;
@@ -40,9 +40,9 @@ $question-padding: 1.5rem;
             border-bottom: 2px solid $border-color;
         }
 
-        &.darkTheme {
+        &.darkerBackground {
             background-color: $section-grey-background-color;
-            border-color: $dark-theme-border-color;
+            border-color: $dark-grey-border-color;
             border-width: 1px;
         }
     }
