--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/stay-informed-section/stay-informed-section.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h2 class="title static-page-title">{{(title || 'App.HomePage.StayInformedSection.Title') | translate}}</h2>
     <div class="social-media">
-        <div class="text static-page-paragraph-text" translate>App.HomePage.StayInformedSection.Text</div>
+        <div class="text static-page-paragraph-text">{{(text || 'App.HomePage.StayInformedSection.Text') | translate}}</div>
         <div class="social-media__links">
             <a class="social-media__link" [href]="twitterUrl" target="_blank">
                 <img class="social-media__logo" lazy-resource src="assets/images/twitter.svg"
