--- a/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="wrapper">
     <app-header></app-header>
     <router-outlet></router-outlet>
-    <app-footer *ngIf="!isSplashPage"></app-footer>
+    <app-footer *ngIf="!isSplashPage"
+                [phone]="phone"
+                [email]="email">
+    </app-footer>
 </div>
