DDP-6563 use color variable

--- a/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/activities.scss
@@ -121,7 +121,7 @@
 
         .activity-step {
             &__number {
-                background-color: #5a42d0;
+                background-color: $activity-step-inactive;
                 color: white;
             }
 
