DDP-6563 use lowercase for activity and dashboard buttons. Fix dashboard buttons width

--- a/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
@@ -90,6 +90,10 @@ toolkit-dashboard-redesigned .main {
             border-bottom: 0;
         }
     }
+
+    .Button--cell {
+        width: 6.75rem;
+    }
 }
 
 .infobox_dashboard {
