--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.scss
@@ -1,12 +1,7 @@
 @import '../../../styles/variables.scss';
 @import '../../../styles/common.scss';
 
-.main > * {
-    width: 100%;
-}
-
 section {
-    box-sizing: border-box;
     text-align: center;
 
     &:nth-of-type(even) {
@@ -14,7 +9,6 @@ section {
     }
 
     &.introduction {
-        max-width: 1440px;
         padding-top: 6.75rem;
         padding-bottom: 1.125rem;
         background-image: url(/assets/images/hero.png);
@@ -24,12 +18,6 @@ section {
 
         .title {
             margin-bottom: 1rem;
-        }
-
-        .logos {
-            img:first-child {
-                margin-right: 5rem;
-            }
         }
     }
 
@@ -89,11 +77,13 @@ section {
     }
 
     &.stay-informed {
-        padding: 5.38rem 1.25rem 4.5rem 1.25rem;
+        padding-left: 1.25rem;
+        padding-right: 1.25rem;
     }
 
     &.join-cmi {
-        padding: 4.75rem 0 6.19rem 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
@@ -101,17 +91,6 @@ section {
     max-width: 45.5rem;
     margin: 0 auto;
     text-align: center;
-}
-
-.btn {
-    font-size: 1.13rem;
-    padding: 1rem 2rem;
-    line-height: 22px;
-}
-
-.join-cmi-btn {
-    font-size: 1.25rem;
-    margin: 1.56rem 0 7.5rem;
 }
 
 .learn-more-btn {
