DDP-6563 fix dashboard buttons width for spanish labels

--- a/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
@@ -92,7 +92,8 @@ toolkit-dashboard-redesigned .main {
     }
 
     .Button--cell {
-        width: 6.75rem;
+        width: 7rem;
+        padding: 0.625rem 1rem;
     }
 }
 
