DDP-6563 use lowercase for activity and dashboard buttons. Fix dashboard buttons width (#753)
* DDP-6563 use lowercase for activity and dashboard buttons. Fix dashboard buttons width

* DDP-6563 fix dashboard buttons width for spanish labels

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/styles/dashboard.scss
@@ -90,6 +90,11 @@ toolkit-dashboard-redesigned .main {
             border-bottom: 0;
         }
     }
+
+    .Button--cell {
+        width: 7rem;
+        padding: 0.625rem 1rem;
+    }
 }
 
 .infobox_dashboard {
