DDP-6563 buttons styles refactoring

--- a/ddp-workspace/projects/ddp-pancan/src/app/components/auth/auth.component.scss
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/auth/auth.component.scss
@@ -1,7 +1,6 @@
-@import '../../../styles/common';
+@import '../../../styles/buttons';
 
 .action-button {
-    @extend .btn-auth;
     margin-left: 0.9rem;
 }
 
