--- a/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="actions">
         <div class="actions__wrapper">
             <button mat-button
-                    class="back-to-top btn-common"
+                    class="back-to-top button button_small"
                     (click)="goToTop()">
                 <mat-icon>arrow_drop_up</mat-icon>
                 {{'App.Footer.BackToTopButton' | translate}}
