--- a/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
+++ b/ddp-workspace/projects/ddp-pancan/src/app/components/welcome/welcome.component.html
@@ -4,7 +4,7 @@
         <p class="text static-page-paragraph-text" translate>App.HomePage.IntroductionSection.Text</p>
         <a mat-flat-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
-           class="btn join-cmi-btn center btn-common"
+           class="btn join-cmi-btn center button button_small"
            color="primary">
             {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
@@ -23,7 +23,7 @@
         <p class="text static-page-paragraph-text" [innerHTML]="'App.HomePage.LearnMoreSection.Text' | translate"></p>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.AboutUs"
-           class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
+           class="btn learn-more-btn center small-letter-spacing button button_small button_secondary">
             {{'App.HomePage.LearnMoreSection.LearnMoreAboutUsButton' | translate}}
         </a>
     </section>
@@ -57,7 +57,7 @@
         <div class="container">
             <a mat-stroked-button
                [routerLink]="'/' + AppRoutes.Participation"
-               class="btn learn-more-btn center small-letter-spacing btn-common btn-outline">
+               class="btn learn-more-btn center small-letter-spacing button button_small button_secondary">
                 {{'App.HomePage.ParticipateSection.LearnMoreAboutParticipationButton' | translate}}
             </a>
         </div>
@@ -70,7 +70,7 @@
         </div>
         <a mat-stroked-button
            [routerLink]="'/' + AppRoutes.FAQ"
-           class="btn more-faq-btn center small-letter-spacing btn-common btn-outline">
+           class="btn more-faq-btn center small-letter-spacing button button_small button_secondary">
             {{'App.FAQ.Button.MoreFAQs' | translate}}
         </a>
     </section>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <button mat-stroked-button
-                    class="btn join-btn small-letter-spacing btn-common btn-outline"
+                    class="btn join-btn small-letter-spacing button button_small button_secondary"
                     (click)="openJoinMailingList()">
                 {{'App.HomePage.StayInformedSection.JoinMailingListButton' | translate}}
             </button>
@@ -112,7 +112,7 @@
         <p class="text static-page-paragraph-text" translate>App.HomePage.CountMeInSection.Text</p>
         <a mat-raised-button
            [routerLink]="'/' + AppRoutes.CountMeIn"
-           class="btn join-cmi-btn btn-common"
+           class="btn join-cmi-btn button button_small"
            color="primary">
             {{'App.HomePage.JoinCountMeInButton' | translate}}
         </a>
